syntax = "proto3";

option java_package = "com.example.grpc";
option java_multiple_files = true;

service MemberService {
  rpc GetMember (MemberRequest) returns (MemberResponse);
}

message MemberRequest {
  string name = 1;
}

message MemberResponse {
  string name = 1;
}
